[gd_scene load_steps=12 format=2]

[ext_resource path="res://obstacle/obstacle.gd" type="Script" id=1]
[ext_resource path="res://fonts/Bohemian Typewriter.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://button_theme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 1, 1, 0 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11, 11 )

[sub_resource type="Animation" id=4]
resource_name = "blink_box"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("bg_color:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 1, 1, 0 ), Color( 0, 1, 1, 0.392157 ), Color( 0, 1, 1, 0.196078 ), Color( 0, 1, 1, 0.392157 ), Color( 0, 1, 1, 0.196078 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "disappear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "disappear_powerup"
tracks/0/type = "value"
tracks/0/path = NodePath("label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("bg_color:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 1, 1, 0.392157 ), Color( 0, 1, 1, 0.196078 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("bg_color:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 1, 1, 0.196078 ), Color( 0, 1, 1, 0.392157 ) ]
}

[node name="obstacle" type="RigidBody2D" groups=[
"obstacle",
]]
collision_layer = 16
collision_mask = 15
mode = 3
gravity_scale = 0.0
contacts_reported = 99999
contact_monitor = true
script = ExtResource( 1 )

[node name="label" type="Label" parent="."]
margin_top = -0.814514
margin_right = 22.0
margin_bottom = 21.1855
rect_pivot_offset = Vector2( 10, 10 )
theme = ExtResource( 3 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "A"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg_color" type="ColorRect" parent="."]
show_behind_parent = true
margin_right = 22.0
margin_bottom = 22.0
color = Color( 0, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 11, 11 )
shape = SubResource( 3 )

[node name="position" type="Tween" parent="."]

[node name="anim_player" type="AnimationPlayer" parent="."]
anims/blink_box = SubResource( 4 )
anims/disappear = SubResource( 5 )
anims/disappear_powerup = SubResource( 6 )
anims/light_down = SubResource( 7 )
anims/light_up = SubResource( 8 )
[connection signal="tween_all_completed" from="position" to="." method="_on_position_tween_all_completed"]
[connection signal="animation_finished" from="anim_player" to="." method="_on_anim_player_animation_finished"]
